src/test/ui/parser/issue-14303-struct.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-struct.rs:1:17
   |
LL | struct X<'a, T, 'b> {
   |         --------^^- If I were you, I would simply reorder the parameters: lifetimes, then types: `<'a, 'b, T>`

error: aborting due to previous error

